fixed issue where fixed background did not work on mobile safari

--- a/src/styles/scrollAnimate.css
+++ b/src/styles/scrollAnimate.css
@@ -2,12 +2,12 @@
   opacity: 0;
   filter: blur(5px);
   transform: translateX(-50%);
-  transition: all 1s;
+  transition: all 0.3s;
 }
 
 .show {
   opacity: 1;
   filter: (blur(0));
   transform: translateX(0);
-  transition: all 1s;
+  transition: all 0.3s;
 }
